# thinmam

./: .gitignore  setup.cfg
thinmam/: MOX.py  SS.py  __init__.py  chromoly.py  gap.py  glass.py
