[metadata]

name = thinmam
version = 1
author = VikramGovindarajan
author_email = vickymailbuddy@gmail.com
description = Solid thermodynamic and mechanical properties package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/VikramGovindarajan/thinmam
download_url = https://github.com/VikramGovindarajan/thinmam/archive/refs/tags/v1.tar.gz
project_urls =
    Bug Tracker = https://github.com/VikramGovindarajan/thinmam/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =

packages = find:
python_requires = >=3.6

[options.packages.find]
where = 